<resources>
    <string name="app_name">Basdat2_Torik</string>
    <string name="day_1">day1</string>
    <string name="play_with_android_studio">Play With Android</string>
    <string name="day_2">day2</string>
    <string name="layout_and_single_page_app">Layout and Single Page App</string>
    <string name="day_3">Day3</string>
    <string name="intent_and_multi_screen_app">Intent And MultiScreen App</string>
    <string name="day_4">Day4</string>
    <string name="material_design_and_storage">Material Design And Storage</string>
    <string name="day_5">Day5</string>
    <string name="background_services_and_app_distribution">Background Service And App Distribution</string>
    <string name="explanation">  Type your text here, then share via other app. </string>
    <string name="hello">Hello!</string>
    <string name="share">Share</string>
    <string name="send_intent_title">Send a message via:</string>
    <!-- SendMessageActivity -->
    <string name="sending_message">Sending a message</string>
    <string name="to">To:</string>
    <string name="send">Send</string>
    <string name="body">Body:</string>
    <string name="hint_body">Edit your message.</string>
    <string name="message_sent">Sent a message \"%1$s\" to  %2$s.</string>
    <string name="text_to_share">Text to share</string>
</resources>
